[gd_scene load_steps=4 format=3 uid="uid://hfbgrdp6bmgq"]

[ext_resource type="Script" path="res://src/ui/dialog/cutscene_controller.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cc15b70sewytv" path="res://src/ui/dialog/dialog.tscn" id="2"]
[ext_resource type="Script" path="res://src/utils/audio_player.gd" id="4"]

[node name="CutsceneController" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")
voices = null
disable_cutscenes = null
metadata/_edit_lock_ = true

[node name="Dialog" parent="." instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
grow_vertical = 0

[node name="Wait" type="Timer" parent="."]
one_shot = true

[node name="VoiceoverPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 15.0
script = ExtResource("4")

[connection signal="dialog_finished" from="Dialog" to="." method="_on_dialog_dialog_finished"]
[connection signal="timeout" from="Wait" to="." method="_on_Wait_timeout"]
